- Fix maximum length of wxPropertyGrid editors (#23033).

wxGTK:

- Fix resizing wxGLCanvas with EGL and Wayland (Carl Hetherington, #22811).
- Fix missing X11 libraries when linking with wxGTK2 statically (#22813).
- Fix compilation with GTK 3.22.z and z < 25 (#22816).
- Fix compilation with GTK < 2.21.8 (mkirkham, #22830).

wxMSW:

- Fix crashes when using wxTextCtrl with MinGW TDM 64 (#22639).
- Fix glitch in drawing wxStaticBox with a control as label (#22952).
- Save windows geometry correctly when using Aero Snap (Randalphwa, #22730).
- Fix generating wxEVT_TEXT_ENTER in wxBitmapComboBox (#16318).
- Fix return value of wxZoomGestureEvent::GetZoomFactor() (s-murphree, #22818).
- Update top level icon resolution on DPI change (#22807).
- Fix scaling of standard MSW icons in high DPI (#23031).
- Fix menu items with custom font in high DPI (#22957).
- Remove "Printing" from title when printing to PDF (Blake-Madden, #22836).
- Fix sometimes missing overvwrite prompt in "Save" file dialog (#22898).
- Set wxUSE_TASKBARBUTTON correctly when building using configure (#22900).
- Queue wxWebViewEdge events to avoid hangs (Tobias Taschner, #23025).
- Fix getting printer information in the print dialog (Stefan Ziegler, #23068).
- Fix building samples with clang under MSYS (Maarten Bent, #23057).
- Fix memory leak when allocating command line arguments (#23081).

wxOSX:

- Generate wxEVT_DATAVIEW_COLUMN_HEADER_RIGHT_CLICK (#22833).
- Fix wxDataViewCtrl::HitTest() (Vojtěch Bubník, #22789).
- Fix position of the controls in wxStaticBox after resizing it (#22837).
- Ensure that "Window" menu is inserted before "Help" (#22871).
- Fix compiling with Xcode 7.3 and macOS 11 SDK (crazbot, #22988).
- Always call wxTaskBarIcon::GetPopupMenu() (William Lindnilsson, #23008).


3.2.1: (released 2022-09-09)
----------------------------

All (GUI):

- Add wxFileDialog::AddShortcut() (#22543).
- Fix grid window scrollbars when freezing part of the grid (#22602).